# dwmstatus-rs

./: Cargo.toml  README.md
config/: config.toml
src/: main.rs  run.rs  types.rs  utils.rs
src/config/: app.rs  app_raw.rs  mod.rs
