[package]
name = "dwmstatus"
version = "0.1.0"
authors = ["Jeff Zhao <jeff.no.zhao@gmail.com>"]
description = "Status bar output"
license = "LGPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0"
lazy_static = "^1"
serde = "^1"
serde_derive = "^1"
systemstat = "^0"
toml = "^0"
